Fix dates alignment

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -50,6 +50,9 @@ https://stackoverflow.com/a/32570813
 .postlist-link > h2 {
   display: contents;
 }
+.postlist-date {
+  vertical-align: text-bottom;
+}
 
 /* Direct Links / Markdown Headers */
 .direct-link {
